--- a/app/src/main/res/layout/activity_create_language.xml
+++ b/app/src/main/res/layout/activity_create_language.xml
@@ -6,6 +6,13 @@
     android:layout_height="match_parent"
     tools:context=".CreateLanguageActivity">
 
+    <!-- Toolbar -->
+    <include
+        android:id="@+id/toolbar_include"
+        layout="@layout/toolbar_layout"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <EditText
         android:id="@+id/et_language_name"
@@ -14,7 +21,7 @@
         android:layout_marginTop="80dp"
         android:hint="@string/nombre_del_lenguaje"
         android:inputType="textPersonName"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/toolbar_include"
         android:layout_marginHorizontal="48sp"
         />
 
