--- a/app/src/main/res/layout/activity_create_project.xml
+++ b/app/src/main/res/layout/activity_create_project.xml
@@ -7,19 +7,28 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:orientation="vertical"
-        android:padding="16dp"
+
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+        <!-- Toolbar -->
+        <include
+            android:id="@+id/toolbar_include"
+            layout="@layout/toolbar_layout"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
+
 
         <EditText
             android:id="@+id/et_project_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/nombre_del_proyecto"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="48sp"
             android:layout_marginHorizontal="48sp"
-            />
+            android:hint="@string/nombre_del_proyecto"
+            android:layout_marginTop="48dp"
+            app:layout_constraintTop_toBottomOf="@id/toolbar_include"
+            tools:layout_editor_absoluteX="48dp"
+            tools:layout_editor_absoluteY="112dp" />
 
         <EditText
             android:id="@+id/et_project_description"
