--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,15 +4,22 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="16dp"
     android:gravity="center">
+
+    <!-- Toolbar -->
+    <include
+        android:id="@+id/toolbar_include"
+        layout="@layout/toolbar_layout"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <TextView
         android:id="@+id/tv_login"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="160dp"
-        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="120dp"
+        app:layout_constraintTop_toBottomOf="@id/toolbar_include"
         android:text="@string/login"
         android:textAlignment="center"
         android:textSize="32sp"
@@ -39,7 +46,7 @@
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/et_username"
         android:layout_marginHorizontal="48sp"
-        android:layout_marginTop="12sp"
+        android:layout_marginTop="16sp"
         />
 
     <Button
@@ -48,7 +55,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/et_password"
-        android:layout_marginTop="32sp"
+        android:layout_marginTop="48sp"
         android:layout_marginHorizontal="48sp"
         />
 
