--- a/app/src/main/res/layout/activity_project_detail.xml
+++ b/app/src/main/res/layout/activity_project_detail.xml
@@ -2,12 +2,18 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="16dp">
+    android:layout_height="match_parent">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+
+        <include
+            android:id="@+id/toolbar_include"
+            layout="@layout/toolbar_layout"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
 
         <TextView
             android:id="@+id/tv_project_language"
@@ -16,7 +22,8 @@
             android:layout_marginTop="48dp"
             android:text="@string/lenguaje"
             android:textSize="16sp"
-            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginHorizontal="32dp"
+            app:layout_constraintTop_toBottomOf="@id/toolbar_include"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
 
@@ -29,6 +36,7 @@
             app:layout_constraintTop_toBottomOf="@id/tv_project_language"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginHorizontal="32dp"
             android:layout_marginTop="32dp"
             android:textStyle="bold" />
 
@@ -43,6 +51,7 @@
             app:layout_constraintTop_toBottomOf="@id/tv_project_name"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginHorizontal="32dp"
             android:layout_marginTop="8dp" />
 
 
@@ -57,6 +66,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginTop="16dp"
+            android:layout_marginHorizontal="32dp"
             android:textStyle="bold" />
 
         <EditText
@@ -67,6 +77,7 @@
             app:layout_constraintTop_toBottomOf="@id/tv_project_description"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginHorizontal="32dp"
             android:layout_marginTop="8dp" />
 
         <!-- Horas Estimadas -->
@@ -79,6 +90,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginTop="16dp"
+            android:layout_marginHorizontal="32dp"
             android:textStyle="bold" />
 
         <EditText
@@ -90,6 +102,7 @@
             app:layout_constraintTop_toBottomOf="@id/tv_project_hours"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginHorizontal="32dp"
             android:layout_marginTop="8dp" />
 
         <!-- Prioridad -->
@@ -102,6 +115,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginTop="16dp"
+            android:layout_marginHorizontal="32dp"
             android:textStyle="bold" />
 
         <EditText
@@ -113,6 +127,7 @@
             app:layout_constraintTop_toBottomOf="@id/tv_project_priority"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginHorizontal="32dp"
             android:layout_marginTop="8dp" />
 
 
@@ -126,6 +141,8 @@
             app:layout_constraintTop_toBottomOf="@id/et_project_priority"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="32dp" />
+            android:layout_marginHorizontal="64dp"
+            android:layout_marginTop="48dp" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
